# github_connector

./: .env.example  .gitignore  Dockerfile  README.md  openapi.yml  pyproject.toml
UI/: package-lock.json  package.json  task.md  vite.config.ts
UI/src/: App.tsx  index.css
UI/src/pages/: Dashboard.tsx  Login.tsx
camunda/v1/: PR_review.md  decision.form  inputs.form  pr.form  pr_review.bpmn
camunda/v2/: pr_review_v2.bpmn  v2_decision.form  v2_inputs.form
docs/: architecture.md  camunda-integration.md  design_decisions.md  full_explanation.md  githubAPI.md  requirements.md  task.md  ui-architecture.md
src/: app.py  uv.py
src/auth/: oauth.py  routes.py  service.py
src/auth/service/: github.py
src/camunda/: auth.py  client.py  routes.py  worker.py
src/core/: config.py  constants.py  logging.py  session.py
src/dependencies/: auth.py  github.py
src/github/: client.py  retry_policy.py  service.py
src/github/routes/: __init__.py  commits.py  issues.py  pulls.py  repos.py
src/models/: auth.py  error.py  github.py
tests/: conftest.py  test_auth_routes.py  test_auth_service.py  test_core_config.py  test_core_logging.py  test_dependencies.py  test_github_client.py  test_github_retry_policy.py  test_github_routes.py
