[project]
name = "github-connector"
version = "0.1.0"
description = "connect to github"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anyio>=4.13.0",
    "authlib>=1.6.9",
    "dotenv>=0.9.9",
    "fastapi[all]>=0.135.2",
    "httpx>=0.28.1",
    "itsdangerous>=2.2.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "structlog>=25.5.0",
    "tenacity>=9.1.4",
    "uvicorn>=0.42.0",
]

[project.scripts]
dev = "src.uv:start_dev"
prod = "src.uv:start_prod"
test = "src.uv:tests"
check = "src.uv:check"

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.3.0",
    "types-authlib>=1.6.9.20260303",
]


[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
addopts = "-v"
filterwarnings = [
    "ignore::pytest.PytestAssertRewriteWarning",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = []
